
* Sat Nov 27 12:58:28 2004, pabs <pabs@pablotron.org>
  * rubilicious.rb: change URI encoding to CGI::escape (suggested by
    James Britt)
  * rubilicious.rb: added Rubilicious#base_uri, to override the 
    base URI of API requests (the Delicious API documentation says that
    the URL could change at some point, so this will allow existing
    rubilicious installs to work without code muckery.  You can also set
    the RUBILICIOUS_BASE_URI environment variable (if it's not set, then
    Rubilicious#base_uri defaults to 'http://del.icio.us/api'

* Sat Nov 27 13:03:57 2004, pabs <pabs@pablotron.org>
  * README: updated the last updated date :D

* Fri Mar 11 02:53:17 2005, pabs <pabs@pablotron.org>
  * rubilicious.rb: applied #delete patch from Nobuhiro IMAI
    <nov@yo.rim.or.jp>                                                
  * rubilicious.rb: use built-in delicious add method
  * rubilicious.rb: add support for #update
  * rubilicious.rb: add mandatory 1-second delay between calls (as per
    the API documentation's request)

* Fri Mar 11 02:58:10 2005, pabs <pabs@pablotron.org>
  * README: update version to 0.1.4
  * rubilicious.gemspec: ditto

* Fri Mar 11 02:59:50 2005, pabs <pabs@pablotron.org>
  * releasing 0.1.4

* Sun May 29 19:31:03 2005, pabs <pabs@pablotron.org>
  * README: add note about bugs.p.o
  * README: increment versoin to 0.1.5
  * rubilicious.rb: ditto
  * rubilicious.gemspec: ditto

* Sun May 29 19:57:36 2005, pabs <pabs@pablotron.org>
  * rubilicious.rb: fix friggin HTTP proxy support (Fixes: #21)

* Sun May 29 20:01:29 2005, pabs <pabs@pablotron.org>
  * rubilicious.rb: fix Rubilicious#delete (reported by Ruben Laguna 
    Fixes: #23)

* Sun May 29 20:06:11 2005, pabs <pabs@pablotron.org>
  * examples/add_link.rb: fix bugs reported by Jon on Rubilicious
    project page (http://pablotron.org/software/rubilicious/) (Fixes: #24)

* Sun May 29 20:10:53 2005, pabs <pabs@pablotron.org>
  * ChangeLog: don't forget to note whichb ug was fixed!